--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             <p class="leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus itaque dolorum cupiditate, id, hic similique cumque soluta quas veritatis voluptatum aut. Ad omnis nulla, dolores veniam libero maiores a deleniti? Numquam necessitatibus voluptatem, ex cupiditate debitis commodi, unde recusandae obcaecati magnam ab ipsa! Eum sint tempore voluptatem ut doloremque.
              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum, eum accusamus libero hic dolor, ea suscipit consequuntur iure nostrum quisquam iste ab. Rem, odio. Nam impedit aperiam inventore fugit dolorem, nemo excepturi aliquid ipsam?</p>
             <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-8 mb-6"></span>
-            <h2 class="text-white font-medium title-font tracking-wider text-sm">Edual Baba</h2>
+            <h2 class="text-white font-medium title-font tracking-wider text-sm">Narendra modi</h2>
             <p class="text-gray-500">Senior of all Developer</p>
           </div>
         </div>
